Add example basic user login - NOTE DO NOT STORE STRING PWD IN DB

--- a/SimpleUser/appsettings.json
+++ b/SimpleUser/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SimpleUser":"Server=.\\SQLEXPRESS;Database=SimpleUserDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
